--- a/src/pages/News/NewsSection.module.css
+++ b/src/pages/News/NewsSection.module.css
@@ -1,4 +1,9 @@
 .mainNewsSection {
-    margin-top: 70px;
-    margin-bottom: 42px;
+    padding-top: 70px;
+    margin-bottom: 70px;
+}
+@media only screen and (min-width: 768px) {
+    .mainNewsSection {
+    padding-top: 170px;
+    }
 }
