--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -1,4 +1,4 @@
-.newsSection {
+/* .newsSection {
 padding-top: 30px;
 margin-bottom: 50px;
 }
@@ -12,7 +12,7 @@ margin-bottom: 50px;
 
         margin-bottom: 0px;
     }
-}
+} */
 
 .title {
     color: #474249;
