--- a/src/pages/News/NewsSection.module.css
+++ b/src/pages/News/NewsSection.module.css
@@ -7,3 +7,8 @@
     padding-top: 170px;
     }
 }
+@media only screen and (min-width: 1024px) {
+    .mainNewsSection {
+            padding-top: 190px;
+        }
+}
