--- a/src/pages/UsefulToKnow/ArabicaOrRobusta/ArabicaOrRobusta.module.css
+++ b/src/pages/UsefulToKnow/ArabicaOrRobusta/ArabicaOrRobusta.module.css
@@ -18,6 +18,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
 }
 
 @media only screen and (min-width: 1024px) {
@@ -64,8 +65,8 @@
     /* display: ruby; */
     text-align: center;
 
-    margin-bottom: 18px;
-}
+    padding-left: 10px;
+  }
 
 @media only screen and (min-width: 768px) {
     .arabicaOrRobustaTitle {
@@ -89,6 +90,7 @@
     color: #888888;
 
     margin-bottom: 16px;
+    
 }
 
 @media only screen and (min-width: 768px) {
@@ -121,4 +123,8 @@
     .arabicaOrRobustaSubTitle {
         font-size: 18px;
     }
+}
+.arabicaOrRobustaWrap {
+    padding-left: 10px;
+    padding-right: 10px;
 }
