--- a/src/pages/UsefulToKnow/ArabicaOrRobusta/ArabicaOrRobusta.module.css
+++ b/src/pages/UsefulToKnow/ArabicaOrRobusta/ArabicaOrRobusta.module.css
@@ -105,6 +105,11 @@
 
     margin-bottom: 18px;
 }
+@media only screen and (min-width: 1024px) {
+    .arabicaOrRobustaList {
+        margin-bottom: 100px;
+    }
+}
 .arabicaOrRobustaItem {
     margin-bottom: 18px;
 }
@@ -118,6 +123,8 @@
     font-size: 18px;
     line-height: 1.5;
     color: #888888;
+
+    margin-bottom: 16px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -135,6 +142,8 @@
     font-size: 16px;
     line-height: 1.5;
     color: #888888;
+
+    margin-bottom: 16px;
 }
 
 @media only screen and (min-width: 768px) {
