--- a/src/pages/UsefulToKnow/FactsAboutCoffee/FactsAboutCoffee.module.css
+++ b/src/pages/UsefulToKnow/FactsAboutCoffee/FactsAboutCoffee.module.css
@@ -136,6 +136,8 @@
     font-size: 16px;
     line-height: 1.5;
     color: #888888;
+
+    margin-bottom: 16px;
 }
 
 @media only screen and (min-width: 768px) {
