--- a/src/pages/UsefulToKnow/WhyIsTeaCalledTea/WhyIsTeaCalledTea.module.css
+++ b/src/pages/UsefulToKnow/WhyIsTeaCalledTea/WhyIsTeaCalledTea.module.css
@@ -73,7 +73,7 @@
     .whyIsTeaCalledTeaTitle {
         font-size: 40px;
         text-align: left;
-        padding-left: 10px;
+        padding-left: 0;
     }
 }
 
@@ -114,6 +114,25 @@
         font-size: 18px;
     }
 }
+
+.whyIsTeaCalledTeaText2 {
+    text-align: justify;
+    align-items: center;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #888888;
+}
+
+@media only screen and (min-width: 768px) {
+    .whyIsTeaCalledTeaText2 {
+        font-size: 18px;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .whyIsTeaCalledTeaText2 {
+        margin-bottom: 100px;
+    }
+}
 .whyIsTeaCalledTeaList {
     padding-left: 10px;
     padding-right: 10px;
@@ -121,11 +140,6 @@
     margin-bottom: 18px;
 }
 
-@media only screen and (min-width: 1024px) {
-    .whyIsTeaCalledTeaList {
-        margin-bottom: 100px;
-    }
-}
 .whyIsTeaCalledTeaItem {
     /* margin-bottom: 18px; */
     display: flex;
