--- a/src/pages/UsefulToKnow/WhyIsTeaCalledTea/WhyIsTeaCalledTea.module.css
+++ b/src/pages/UsefulToKnow/WhyIsTeaCalledTea/WhyIsTeaCalledTea.module.css
@@ -141,8 +141,8 @@
 }
 
 .whyIsTeaCalledTeaItem {
-    /* margin-bottom: 18px; */
     display: flex;
+    gap: 3px;
 }
 
 /* .whyIsTeaCalledTeaItem:last-child {
