--- a/src/pages/UsefulToKnow/QualityOfTea/QualityOfTea.module.css
+++ b/src/pages/UsefulToKnow/QualityOfTea/QualityOfTea.module.css
@@ -138,7 +138,6 @@
 @media only screen and (min-width: 768px) {
 .qualityOfTeaWrap {
     display: flex;
-    align-items: center;
 }
 }
 @media only screen and (min-width: 768px) {
@@ -151,4 +150,9 @@
         margin-right: 20px;
         width: 350px;
     }
+}
+@media only screen and (min-width: 1024px) {
+    .qualityOfTeaItemImg {
+            width: 500px;
+        }
 }
