--- a/src/pages/UsefulToKnow/7Mistakes/7Mistakes.module.css
+++ b/src/pages/UsefulToKnow/7Mistakes/7Mistakes.module.css
@@ -177,3 +177,8 @@
     margin-bottom: 35px;
 }
 }
+@media only screen and (min-width: 1024px) {
+    .anotherMistakesItem {
+        margin-bottom: 55px;
+    }
+}
