--- a/src/pages/UsefulToKnow/QualityOfTea/QualityOfTea.module.css
+++ b/src/pages/UsefulToKnow/QualityOfTea/QualityOfTea.module.css
@@ -156,3 +156,14 @@
             width: 500px;
         }
 }
+@media only screen and (min-width: 768px) {
+    .anotherQualityOfTeaItem {
+        margin-bottom: 35px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .anotherQualityOfTeaItem {
+        margin-bottom: 55px;
+    }
+}
