--- a/src/pages/UsefulToKnow/7Mistakes/7Mistakes.module.css
+++ b/src/pages/UsefulToKnow/7Mistakes/7Mistakes.module.css
@@ -169,6 +169,7 @@
 
 @media only screen and (min-width: 1024px) {
     .mistakesListItemImg {
+        margin-right: 55px;
         width: 500px;
     }
 }
