--- a/src/components/AboutUsInformation/AboutUsInformation.module.css
+++ b/src/components/AboutUsInformation/AboutUsInformation.module.css
@@ -13,6 +13,7 @@
 @media only screen and (min-width: 1024px) {
     .aboutWrapper {
         max-width: 640px;
+        padding-bottom: 30px;
     }
 }
 
