--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -23,7 +23,11 @@
     background-position: center;
     padding-top: 20px;
 }
-
+@media only screen and (min-width: 1440px) {
+    .hero {
+        padding-bottom: 40px;
+    }
+}
 .heroInformation {
     margin: 0 auto;
     padding-top: 70px;
