--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -274,6 +274,7 @@ color: #474249;
 
 @media only screen and (min-width: 1440px) {
     .newsSection {
+        padding-top: 60px;
         background-image: url(../../images/brandsBG.jpg);
         background-repeat: no-repeat;
         background-size: 100%;
