--- a/src/pages/BatikPage/BatikPage2.module.css
+++ b/src/pages/BatikPage/BatikPage2.module.css
@@ -121,6 +121,10 @@
 .collectionImg {
     margin-bottom: 50px;
 }
+.goldCollectionImg {
+    margin-bottom: 50px;
+}
+
 .batikTitle {
     text-align: center;
     color: #423930;
@@ -196,9 +200,6 @@
 
     margin-bottom: 50px;
 }
-.goldCollectionImg {
-    margin-bottom: 50px;
-}
 .batikGoldSectionWrapper {
     display: flex;
     flex-direction: column;
@@ -210,7 +211,7 @@
 @media only screen and (min-width: 768px) {
     .collectionWrapper {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
         gap: 10px;
     }
@@ -219,6 +220,7 @@
         align-items: center;
         justify-content: center;
         gap: 10px;
+        margin-bottom: 40px;
         }
 
     .collectionImg {
@@ -228,13 +230,19 @@
         object-fit: cover;
         max-height: 400px;
     }
-
-    .batikCollectionSectionWrapper {
-        flex: 1;
-    }
-        .batikGoldSectionWrapper {
-            flex: 1;
-        }
+.goldCollectionImg {
+    flex: 1;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    max-height: 400px;
+}
+.batikCollectionSectionWrapper {
+    flex: 1;
+}
+.batikGoldSectionWrapper {
+    flex: 1;
+}
 
 }
 @media only screen and (min-width: 1024px) {
@@ -249,5 +257,8 @@
     .collectionImg{
         max-height: 630px;
         margin-bottom: 0;
+    }
+    .goldCollectionImg {
+        max-height: 630px;
     }
 }
