--- a/src/pages/BatikPage/BatikPage.module.css
+++ b/src/pages/BatikPage/BatikPage.module.css
@@ -3,68 +3,83 @@
         margin-top: 190px;
     }
 }
+
 @media only screen and (min-width: 1024px) {
     .batikSection {
         margin-top: 240px;
     }
 }
+.mainBatikSection {
+    background-image: url(../../images/batik/batik-main-background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    margin-top: 30px;
+    padding-bottom: 92px;
+    margin-bottom: 40px;
+}
+
 @media only screen and (min-width: 768px) {
-.batikLogoImg {
-    width: 230px;
+    .mainBatikSection {
+        padding-bottom: 0px;
+        margin-bottom: 60px;
+        margin-top: 0;
+    }
 }
+
+@media only screen and (min-width: 1024px) {
+    .mainBatikSection {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
 }
+
+@media only screen and (min-width: 1440px) {
+    .mainBatikSection {
+        padding-top: 150px;
+        padding-bottom: 150px;
+    }
+}
+.batikMainTitle {
+    display: none;
+}
+@media only screen and (min-width: 768px) {
+    .batikLogoTextWrap {
+        display: flex;
+        align-items: center;
+        padding-top: 40px;
+        padding-bottom: 50px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .batikLogoTextWrap {
+        padding-left: 85px;
+    }
+}
+@media only screen and (min-width: 768px) {
+    .batikLogoImg {
+        width: 230px;
+    }
+}
+
 @media only screen and (min-width: 1024px) {
     .batikLogoImg {
         width: 338px;
         margin-right: 50px;
     }
 }
-
-.mainBatikSection {
-    background-image: url(../../images/batik/batik-main-background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;   
-
-    margin-top: 30px;
-    padding-bottom: 92px;
-    margin-bottom: 40px;
- }
- @media only screen and (min-width: 768px) {
-    .mainBatikSection {
-        padding-bottom: 0px;
-        margin-bottom: 60px;
-        margin-top: 0;
+@media only screen and (min-width: 1024px) {
+    .batikArticle {
+        max-width: 850px;
     }
- }
- @media only screen and (min-width: 1024px) {
-    .mainBatikSection {
-        padding-top: 120px;
-        padding-bottom: 120px;
-    }
- }
- @media only screen and (min-width: 1440px) {
-    .mainBatikSection {
-            padding-top: 150px;
-            padding-bottom: 150px;
-        }
- }
-.batikMainTitle {
-    display: none;
 }
-.batikBtn {
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 1;
-    letter-spacing: 2.56px;
-    text-transform: uppercase;
-    
-    text-decoration: none;
-    border: 1px solid #ffff;
-    box-shadow: 3px 3px 0px 0px #FFFFFF;
-    padding: 14px 25px;
-     
-    max-width: 143px;
+
+@media only screen and (min-width: 1440px) {
+    .batikArticle {
+        max-width: 730px;
+    }
 }
 .batikText {
     text-align: justify;
@@ -77,6 +92,7 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+
 @media only screen and (min-width: 1024px) {
     .batikText {
         font-size: 21px;
@@ -95,11 +111,18 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+
 @media only screen and (min-width: 1024px) {
     .batikSlogan {
         font-size: 21px;
         line-height: 1.4;
     }
+}
+.collectionImg {
+    margin-bottom: 50px;
+}
+.goldCollectionImg {
+    margin-bottom: 50px;
 }
 
 .batikTitle {
@@ -119,6 +142,7 @@
         margin-bottom: 30px;
     }
 }
+
 @media only screen and (min-width: 1024px) {
     .batikTitle {
         font-size: 36px;
@@ -135,182 +159,171 @@
     padding-right: 10px;
     margin-bottom: 20px;
 }
+.batikGoldDescription {
+    font-size: 15px;
+        text-align: justify;
+        color: #888888;
+        font-weight: 400;
+        line-height: 1.6;
+    
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-bottom: 20px;
+}
 @media only screen and (min-width: 768px) {
     .batikDescription {
         font-size: 16px;
     }
 }
-@media only screen and (min-width: 1024px) {
-    .batikDescription {
-            font-size: 21px;
-            margin-bottom: 31px;
-            max-width: 750px;
-        }
+@media only screen and (min-width: 768px) {
+    .batikGoldDescription {
+        font-size: 16px;
+    }
 }
 
+@media only screen and (min-width: 1024px) {
+    .batikDescription {
+        font-size: 21px;
+        margin-bottom: 31px;
+        max-width: 750px;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .batikGoldDescription {
+        font-size: 21px;
+        margin-bottom: 31px;
+        max-width: 750px;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .batikDescription {
+        margin-right: 30px;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .batikGoldDescription {
+        margin-left: 30px;
+    }
+}
 .batikBtn {
     font-size: 16px;
     font-weight: 300;
     line-height: 1.5;
     letter-spacing: 2.56px;
     text-transform: uppercase;
-    
+
     text-decoration: none;
     border: 1px solid #000000;
     box-shadow: 3px 3px 0px 0px #000000;
     padding: 10px 45px;
-    
+
     background-color: #FFFFFF;
     color: #000000;
-    
+
     max-width: 250px;
 
     transition: all 0.3s cubic-bezier(0.5, 0.12, 0.46, 0.88);
 }
-
-.batikCollectionSection {
-    margin-bottom: 73px;
-}
-@media only screen and (min-width: 768px) {
-    .batikCollectionSection {
-        display: flex;
-        margin-bottom: 20px;
-    }
-}
-@media only screen and (min-width: 1024px) {
-    .batikCollectionSection {
-        flex-direction: row-reverse;
-        align-items: center;
-        margin-bottom: 0px;
-        gap: 0;       
-    }
-}
-
 .batikCollectionSectionWrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-@media only screen and (min-width: 1024px) {
-    .batikCollectionSectionWrapper {
-    align-items: center;
-    width: 1024px;
-    padding: 100px 40px 100px 40px;
-    }
-}
-@media only screen and (min-width: 1440px) {
-    .batikCollectionSectionWrapper {
-        padding-left: 150px;
-        padding-right: 10px;
-    }
-}
 
-.batikGoldSection {
-    margin-bottom: 73px;
+    margin-bottom: 50px;
 }
-@media only screen and (min-width: 768px) {
-    .batikGoldSection {
-        margin-bottom: 54px;
-        display: flex;
-    }
-}
-@media only screen and (min-width: 1024px) {
-    .batikGoldSection {
-        margin-bottom: 80px;
-        gap: 0;
-    }
-}
-
 .batikGoldSectionWrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-@media only screen and (min-width: 1024px) {
-    .batikGoldSectionWrapper {
-        align-items: center;
-        width: 1024px;
-        padding: 100px 40px 100px 40px;
-    }
-}
-@media only screen and (min-width: 1440px) {
-    .batikGoldSectionWrapper {
-            padding-right: 150px;
-    }
+
+    margin-bottom: 120px;
 }
 @media only screen and (min-width: 768px) {
-.batikLogoTextWrap {
+    .collectionWrapper {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 10px;
+    }
+    .goldCollectionWrapper {
         display: flex;
         align-items: center;
-        padding-top: 40px;
-        padding-bottom: 50px;
-    }
-}
-@media only screen and (min-width: 1024px) {
-.batikLogoTextWrap {
-    padding-left: 85px;
-}
-}
-@media only screen and (min-width: 1024px) {
-    .batikArticle {
-        max-width: 850px;
-    }
-}
-@media only screen and (min-width: 1440px) {
-    .batikArticle {
-            max-width: 730px;
+        justify-content: center;
+        gap: 10px;
+        margin-bottom: 40px;
         }
-}
 
-.batikCollectionImgBack {
-    background-image: url(../../images/batik/batik-collections-background.jpg);
-    background-color: #2a2a2a;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-
-    height: 405px;
-    margin-bottom: 50px;
-}
-@media only screen and (min-width: 768px) {
-    .batikCollectionImgBack {
-        width: 100%;
-        margin-bottom: 0;
-        background-size: cover;
+    .collectionImg {
+        flex: 1;
+        max-width: 100%;
+        height: auto;
+        object-fit: cover;
+        max-height: 400px;
     }
+.goldCollectionImg {
+    flex: 1;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    max-height: 400px;
+}
+.batikCollectionSectionWrapper {
+    flex: 1;
+}
+.batikGoldSectionWrapper {
+    flex: 1;
+}
+
 }
 @media only screen and (min-width: 1024px) {
-    .batikCollectionImgBack {
-        width: 86%;
-        height: 705px;
+    .collectionWrapper {
+        align-items: center;
+        flex-direction: row-reverse;
+       max-height: 630px;
+       gap: 0px;
+    }
+.goldCollectionWrapper {
+    gap: 0px;
+    margin-bottom: 100px;
+}
+    .collectionImg{
+        max-height: 630px;
+        margin-bottom: 0;
+    }
+    .goldCollectionImg {
+        max-height: 630px;
     }
 }
 @media only screen and (min-width: 1440px) {
-    .batikCollectionImgBack {
-        height: 500px;
-    }
+.collectionWrapper {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    align-items: center;
+    width: 1440px;    
 }
-.batikGoldImgBack {
-    background-image: url(../../images/batik/batik-gold-background.jpg);
-    background-color: #2a2a2a;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+.goldCollectionWrapper {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    align-items: center;
+    width: 1440px;
+}
+.collectionImg {
+    height: 650px;
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
+}
 
-    height: 405px;
-    margin-bottom: 50px;
+.goldCollectionImg {
+    height: 650px;
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
 }
-@media only screen and (min-width: 768px) {
-    .batikGoldImgBack {
-        width: 100%;
-        margin-bottom: 0;
-    }
-}
-@media only screen and (min-width: 1024px) {
-    .batikGoldImgBack {
-        height: 705px;
-        width: 86%;
-    }
 }
