--- a/src/pages/BatikCollection/BatikCollection.module.css
+++ b/src/pages/BatikCollection/BatikCollection.module.css
@@ -134,6 +134,7 @@
     .batikMandala {
         bottom: -200px;
         right: -45px;
+        width: 100%;
     }
 }
 @media only screen and (min-width: 768px) {
@@ -143,7 +144,7 @@
 }
 @media only screen and (min-width: 1024px) {
     .batikCollectionTitleWpap {
-            width: 100%;
+            width: 600px;
             padding-left: 22px;
         }
 }
