--- a/src/pages/BatikCollection/BatikCollection.module.css
+++ b/src/pages/BatikCollection/BatikCollection.module.css
@@ -30,6 +30,12 @@
         margin-bottom: 150px;
     }
 }
+@media only screen and (min-width: 1024px) {
+    .mainBatikCollectionSection {
+        padding-top: 40px;
+        padding-bottom: 130px;
+    }
+}
 .batikCollectionMainTitle {
     font-size: 43px;
     line-height: 1.1;
@@ -134,7 +140,7 @@
     .batikMandala {
         bottom: -200px;
         right: -45px;
-        width: 100%;
+        width: 80%;
     }
 }
 @media only screen and (min-width: 768px) {
