--- a/src/pages/BatikCollection/BatikCollection.module.css
+++ b/src/pages/BatikCollection/BatikCollection.module.css
@@ -66,7 +66,7 @@
     }
 }
 @media only screen and (min-width: 1024px) {
-    batikCollectionText {
+    .batikCollectionText {
         font-size: 20px;
     }
 }
