--- a/src/pages/BatikCollection/BatikCollection.module.css
+++ b/src/pages/BatikCollection/BatikCollection.module.css
@@ -97,6 +97,11 @@
         width: 345px;
     }
 }
+@media only screen and (min-width: 1024px) {
+.batikCollectionItem {
+        width: 310px;
+    }
+}
 .batikCollectionOverlayWrap {
     position: relative;
     overflow: hidden;
