--- a/src/pages/BatikCollection/BatikCollection.module.css
+++ b/src/pages/BatikCollection/BatikCollection.module.css
@@ -100,6 +100,12 @@
 @media only screen and (min-width: 1024px) {
 .batikCollectionItem {
         width: 310px;
+        margin-bottom: 0;
+    }
+}
+@media only screen and (min-width: 1440px) {
+    .batikCollectionItem {
+        width: 450px;
     }
 }
 .batikCollectionOverlayWrap {
