--- a/src/pages/BatikCollection/BatikCollection.module.css
+++ b/src/pages/BatikCollection/BatikCollection.module.css
@@ -96,10 +96,15 @@
     .batikCollectionItem {
         width: 345px;
     }
+    
 }
+
 @media only screen and (min-width: 1024px) {
 .batikCollectionItem {
         width: 310px;
+        margin-bottom: 0;
+    }
+    .batikCollectionItem:not(:last-child) {
         margin-bottom: 0;
     }
 }
