--- a/src/pages/BatikCollection/BatikCollection.module.css
+++ b/src/pages/BatikCollection/BatikCollection.module.css
@@ -134,9 +134,7 @@
     padding: 15px;
     line-height: 1.5;
     letter-spacing: 0.32px;
-    
-    overflow: auto;
-    
+        
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -185,4 +183,10 @@
         align-items: center;
         justify-content: center;
     }
+}
+.batikCollectionImg {
+    width: 100%;
+}
+.batikCollectionOverlayWrap {
+    width: 100%;
 }
