--- a/src/pages/Brands/brands.module.css
+++ b/src/pages/Brands/brands.module.css
@@ -106,6 +106,11 @@ margin-bottom: 32px;
         font-size: 20px;
     }
 }
+@media only screen and (min-width: 1440px) {
+    .brandsTitle {
+        font-size: 22px;
+    }
+}
 .catalogBtn {
     font-size: 16px;
     font-weight: 300;
@@ -144,3 +149,9 @@ margin-bottom: 32px;
         padding-right: 50px;
     }
 }
+@media only screen and (min-width: 1440px) {
+    .brandsTitleWrap {
+        width: 1100px;
+        margin: 0 auto;
+    }
+} 
